[Win][Clang] UNUSED_PARAM(this) causes compilation error of "cannot take the address of an rvalue of type" https://bugs.webkit.org/show_bug.cgi?id=189732

Reviewed by Per Arne Vollan.

Clang for Windows can't compile the MSVC workaround of
UNUSED_PARAM which has been introduced for Windows CE and Visual
Studio 10. I think it's safe just to remove it.

* wtf/Compiler.h: Removed the code for COMPILER(MSVC).

Canonical link: https://commits.webkit.org/204771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236302 268f45cc-cd09-0410-ab3c-d52691b4dbfc